# python-2025

./: .gitignore  README.md  pyproject.toml
python_2025/: common.py
python_2025/ai_tester/: a.py  test_ttt.py  x.py  x1.py  x3.py  x4.py
python_2025/airlock_door/: a.py  aa.py  door.py  info.md  user_store.py  web_app.py
python_2025/algo1/: a.py  sety.py
python_2025/backend_app/: app_zero.py  engine.py  gg.py  ship_fight.py
python_2025/graphs/: a.py  poland.json  try_it_out.py  z1.py  zz.py
python_2025/prisoners_dilemma/: a.py  app.py  docs.md  game.py
python_2025/pyscho/: a.py  basic_dicts.py  user_database.py  users.py
python_2025/sentences/: a.py  basics_of_nltk.py  nltk_tags.md
python_2025/starship/: booster_data.csv  ship_data.csv  ship_flight_analysis.py
python_2025/subscriptions/: hints.py  info.md  task_subscription.py
python_2025/trains/: .gitignore  a.py  aa.py  b.py  graph_example.py  graph_example_nx.py  homework_1.py  importer.py  small.csv
python_2025/uploader_app/: app.py  app_security.py  file_tools.py  wd_client.txt  wd_client_for_uploader.py
python_2025/zadania/: a.py  easy_problem.py  normal_problem.py  task_a.py
